fixing spacing bugs

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ p.caption {
 
 @media screen and (orientation: portrait) and (max-width: 1280px) {
     .column {
-        width: 80%;
+        width: 95%;
     }
 
     p {
@@ -87,7 +87,6 @@ p.caption {
 
     img {
         width: 80%;
-        margin-left: 10%;;
     }
 
     p.caption {
@@ -101,12 +100,11 @@ p.caption {
 
 @media screen and (orientation: portrait) and (max-width: 736px) {
     .column {
-        width: 85%;
+        width: 98%;
     }
 
     img {
         width: 95%;
-        margin-left: 2.5%;;
     }
 
     p.caption {
